--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=265,Y=85)
+NewWindowPosition=(X=405,Y=112)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,7 +100,7 @@ LastExecutedLaunchName=DESKTOP-TV1VD74
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=265,Y=85)
+MultipleInstancePositions=(X=405,Y=112)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -133,7 +133,7 @@ LastLevel=/Game/Main/Maps/Untitled
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Main/Tests/HUD.HUD
+OpenAssetsAtExit=/Game/Other/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP
 
 [RootWindow]
 ScreenPosition=X=349.000 Y=60.000
@@ -165,7 +165,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Main
+ContentBrowserTab1.SelectedPaths=/Game/Main/Tests/test_anim
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -205,7 +205,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
-UNR=D:/Sigachev_Diplom/Sigachev_Diplom/Sigachev_Diplom/Content/Maps
+UNR=D:/Sigachev_Diplom/Sigachev_Diplom/Sigachev_Diplom/Content/Main/Maps
 BRUSH=D:/Sigachev_Diplom/Sigachev_Diplom/Content/
 FBX=D:/Sigachev_Diplom/Sigachev_Diplom/Content/
 FBXAnim=D:/Sigachev_Diplom/Sigachev_Diplom/Content/
@@ -1199,6 +1199,7 @@ ThirdPerson_AnimBP_C=
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument1,
 Speeder_C=
 K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument1,
+MovementComponent=
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1709,6 +1710,36 @@ HUD_C.Localization=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+Shield_C.Tick=True
+Shield_C.Replication=True
+Shield_C.Rendering=True
+Shield_C.Collision=True
+Shield_C.Actor=True
+Shield_C.Input=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+AnimGraphNode_SaveCachedPose.GraphNodeDetail=True
+AnimGraphNode_SaveCachedPose.CachedPose=True
+PersonaPreviewSceneDescription.Animation Blueprint=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1717,26 +1748,26 @@ InputSettings=True
 GeneralProjectSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Main/Tests/HUD
+MRUItem0=/Game/Other/Mannequin/Animations/ThirdPerson_AnimBP
 MRUItem1=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Engine/MapTemplates/SM_Template_Map_Floor
-MRUItem3=/Game/Main/Maps/Untitled
-MRUItem4=/Game/Main/Tests/test_anim/Jumping4UE4
-MRUItem5=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem6=/Game/Main/Tests/test_anim/Jumping4UE4_Montage
-MRUItem7=/Game/Main/Tests/Speeder
-MRUItem8=/Game/Mannequin/Animations/Prepare_To_Jump_Montage
-MRUItem9=/Game/Mannequin/Animations/Prepare_To_Jump
-MRUItem10=/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4
-MRUItem11=/Game/Main/Tests/SwordAndShieldBlockIdle4UE4
-MRUItem12=/Game/Main/Tests/test_anim/SwordAndShieldAttack_1_4UE4
-MRUItem13=/Game/Main/Tests/test_anim/GreatSwordJumpAttack4UE4
-MRUItem14=/Game/Main/Tests/Sword/16th_Century_Dark_Sword
-MRUItem15=/Game/Main/Tests/Sword/16th_Century_Dark_Sword/Fbx/16th_Century_Dark_Sword
-MRUItem16=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem17=/Game/Main/Tests/test_anim/test1
-MRUItem18=/Game/Main/Tests/test_anim/TwoHandSwordCombo4UE4
-MRUItem19=/Game/Main/Tests/test_anim/SwordAndShieldBlockIdle4UE4
+MRUItem2=/Game/Main/Tests/test_anim/SprintingForwardRoll4UE4
+MRUItem3=/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4
+MRUItem4=/Game/Main/Tests/SwordAndShieldBlockIdle4UE4
+MRUItem5=/Game/Main/Tests/test_anim/GreatSwordJumpAttack4UE4
+MRUItem6=/Game/Main/Tests/test_anim/SwordAndShieldAttack_1_4UE4
+MRUItem7=/Game/Main/Tests/test_anim/SwordAndShieldBlockIdle4UE4
+MRUItem8=/Game/Main/Tests/test_anim/TwoHandSwordCombo4UE4
+MRUItem9=/Game/Main/Tests/Shield/Shield
+MRUItem10=/Game/Main/Tests/HUD
+MRUItem11=/Engine/MapTemplates/SM_Template_Map_Floor
+MRUItem12=/Game/Main/Maps/Untitled
+MRUItem13=/Game/Main/Tests/test_anim/Jumping4UE4
+MRUItem14=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem15=/Game/Main/Tests/test_anim/Jumping4UE4_Montage
+MRUItem16=/Game/Main/Tests/Speeder
+MRUItem17=/Game/Mannequin/Animations/Prepare_To_Jump_Montage
+MRUItem18=/Game/Mannequin/Animations/Prepare_To_Jump
+MRUItem19=/Game/Main/Tests/Sword/16th_Century_Dark_Sword
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1776,7 +1807,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
-Object="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.MarqueeImage\" "
+Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 AnimMontage="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
@@ -1784,7 +1815,7 @@ AnimCompositeBase="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\
 AnimSequenceBase=
 AnimationAsset=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" "
-AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" "
+AnimGraphNode_BlendListBase=
 AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
@@ -1793,9 +1824,9 @@ PawnMovementComponent=
 NavMovementComponent=
 MovementComponent=
 ActorComponent=
-ThirdPersonCharacter_C="\"Object.CharacterMovement\" "
-Character="\"Object.CharacterMovement\" "
-Pawn="\"Object.CharacterMovement\" "
+ThirdPersonCharacter_C=
+Character=
+Pawn=
 ThirdPerson_AnimBP_C=
 AnimInstance=
 Speeder_C="\"Object.CharREF\" "
@@ -1845,9 +1876,9 @@ InstalledPlugins=XRVisualization
 [AssetEditorToolkitTabLocation]
 /Game/Main/Tests/test_anim/SwordAndShieldBlock4UE4.SwordAndShieldBlock4UE4=1
 /Game/Main/Tests/test_anim/TwoHandSwordCombo4UE4.TwoHandSwordCombo4UE4=1
-/Game/Main/Tests/test_anim/SwordAndShieldBlockIdle4UE4.SwordAndShieldBlockIdle4UE4=1
+/Game/Main/Tests/test_anim/SwordAndShieldBlockIdle4UE4.SwordAndShieldBlockIdle4UE4=0
 /Game/Main/Tests/test_anim/GreatSwordJumpAttack4UE4.GreatSwordJumpAttack4UE4=0
-/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4.GreatSwordHighSpinAttack4UE4=1
+/Game/Main/Tests/test_anim/GreatSwordHighSpinAttack4UE4.GreatSwordHighSpinAttack4UE4=0
 /Game/Main/Tests/test_anim/SwordAndShieldAttack_1_4UE4.SwordAndShieldAttack_1_4UE4=1
 /Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 /Game/Main/Tests/test_anim/test1.test1=0
@@ -1860,6 +1891,8 @@ InstalledPlugins=XRVisualization
 /Game/Mannequin/Animations/Prepare_To_Jump.Prepare_To_Jump=1
 /Game/Main/Tests/Speeder.Speeder=0
 /Engine/MapTemplates/SM_Template_Map_Floor.SM_Template_Map_Floor=0
+/Game/Main/Tests/Shield/Shield.Shield=0
+/Game/Main/Tests/test_anim/SprintingForwardRoll4UE4.SprintingForwardRoll4UE4=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1902,7 +1935,7 @@ DeleteWidgetsInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [UMGEditor.Designer]
 PreviewWidth=1280
