--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,7 +94,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-TV1VD74
 LastExecutedLaunchName=DESKTOP-TV1VD74
 LastExecutedPIEPreviewDevice=
@@ -131,7 +131,7 @@ LastLevel=/Game/Main/Maps/mainmenulvl
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Main/UI/Start/MainMenuPlayerController.MainMenuPlayerController
+OpenAssetsAtExit=/Game/Main/UI/Start/MainMenuWidget.MainMenuWidget
 
 [RootWindow]
 ScreenPosition=X=262.000 Y=87.000
@@ -163,7 +163,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Main/UI/Start
+ContentBrowserTab1.SelectedPaths=/Game/Main/UI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1207,6 +1207,7 @@ MovementComponent=
 PlayerController=
 MainMenuPlayerController_C=
 MainMenuWidget_C=
+Button=K2Node_VariableGet.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument1,
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1757,7 +1758,7 @@ Button.Layout=True
 Button.Appearance=True
 Button.Interaction=True
 Button.Accessibility=True
-Button.Behavior=False
+Button.Behavior=True
 Button.Render Transform=False
 Button.Performance=True
 Button.Clipping=True
@@ -1819,6 +1820,17 @@ InvalidationBox.Navigation=True
 InvalidationBox.Localization=True
 CanvasPanel.Layout=True
 MovieSceneFloatSection.Section=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1827,9 +1839,9 @@ InputSettings=True
 GeneralProjectSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Main/UI/Start/MainMenuPlayerController
-MRUItem1=/Game/Main/Maps/mainmenulvl
-MRUItem2=/Game/Main/UI/Start/MainMenuWidget
+MRUItem0=/Game/Main/UI/Start/MainMenuWidget
+MRUItem1=/Game/Main/UI/Start/MainMenuPlayerController
+MRUItem2=/Game/Main/Maps/mainmenulvl
 MRUItem3=/Game/Main/UI/Start/MainMenuGameMod
 MRUItem4=/Game/Main/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 MRUItem5=/Game/Main/UI/HUD
@@ -1910,16 +1922,20 @@ ThirdPerson_AnimBP_C=
 AnimInstance=
 Speeder_C="\"Object.CharREF\" "
 HUD_C=
-UserWidget=
-Widget="\"Object.Appearance.WidgetStyle\" "
-Visual="\"Object.Appearance.WidgetStyle\" "
+UserWidget="\"Object.Layout.Slot\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.ImageSize\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.ImageSize\" \"Object.Style.WidgetStyle.FillImage.TintColor\" \"Object.Style.WidgetStyle.MarqueeImage\" \"Object.Progress.BorderPadding\" \"Object.Appearance.FillColorAndOpacity\" "
-Button="\"Object.Appearance.WidgetStyle\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" "
 PlayerController=
 Controller=
 Image="\"Object.Appearance.Brush\" "
+MainMenuWidget_C="\"Object.Layout.Slot\" "
+CanvasPanel="\"Object.Layout.Slot\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
 
 [MRU]
 MRUItem0=/Game/Main/Maps/mainmenulvl
